--- a/profileView.html
+++ b/profileView.html
@@ -98,7 +98,7 @@
               </tbody>
             </table>
         </div>
-            <button type="button" class="btn btn-success btn-lg" style="margin: 40px;"><a href="home.html">Home</a></button>
+            <button type="button" class="btn btn-success btn-lg" style="margin: 40px;"><a href="index.html">Home</a></button>
         </div>
     </form>
 
